@@ -212,3 +212,6 @@ Thursday 17 December 2009 (05:00:19 PM)
     - parallel property updater component added.
 Thursday 17 December 2009 (07:01:18 PM)
     - timing module added.
+Thursday 17 December 2009 (09:24:07 PM)
+    - global time step update component.
+    - bug in computing speed of sound parallely rectified.
